# mospeada

./: Cargo.toml  LICENSE  README.md
src/: chat_template.rs  debug.rs  error.rs  generation.rs  hf_hub.rs  lib.rs  pipeline.rs  pooling.rs  repo.rs  tokenizers.rs  utils.rs
tests/: generation_config.rs  qwen_25.rs
