[package]
name = "mospeada"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.2"
minijinja = {version = "2.9.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokenizers = "0.21.1"

[dev-dependencies]
anyhow = "1.0.98"

[features]
default = ["hf_hub"]
hf_hub = []